CHATS_SIT/force-app/main/default/objects/sfrosit_t_indiv_other_income_hist__x/sfrosit_t_indiv_other_income_hist__x.object-meta.xml
<CustomObject>
    <description>sfrosit$t_indiv_other_income_hist</description>
    <externalDataSource>Heroku_Connect_datasource</externalDataSource>
    <externalName>sfrosit$t_indiv_other_income_hist</externalName>
    <label>Other Income History</label>
    <pluralLabel>Other Income History</pluralLabel>
</CustomObject>