CHATS_SIT/force-app/main/default/objects/sfrosit_t_indiv_other_income_hist__x/fields/amt_income_other_gross__c.field-meta.xml
<CustomField>
    <fullName>amt_income_other_gross__c</fullName>
    <description>amt_income_other_gross</description>
    <externalDeveloperName>amt_income_other_gross</externalDeveloperName>
    <label>Gross Amount</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>