CHATS_SIT/force-app/main/default/objects/sfrosit_t_indiv_other_income_hist__x/fields/cde_freq_income__c.field-meta.xml
<CustomField>
    <fullName>cde_freq_income__c</fullName>
    <description>cde_freq_income</description>
    <externalDeveloperName>cde_freq_income</externalDeveloperName>
    <label>How often is the income received?</label>
    <length>255</length>
    <type>Text</type>
</CustomField>