CHATS_SIT/force-app/main/default/objects/sfrosit_t_indiv_other_income_hist__x/fields/cde_source_income__c.field-meta.xml
<CustomField>
    <fullName>cde_source_income__c</fullName>
    <description>cde_source_income</description>
    <externalDeveloperName>cde_source_income</externalDeveloperName>
    <label>Income Source</label>
    <length>255</length>
    <type>Text</type>
</CustomField>