CHATS_SIT/force-app/main/default/objects/sfrosit_t_indiv_other_income_hist__x/fields/cde_vrfyd_docket__c.field-meta.xml
<CustomField>
    <fullName>cde_vrfyd_docket__c</fullName>
    <description>cde_vrfyd_docket</description>
    <externalDeveloperName>cde_vrfyd_docket</externalDeveloperName>
    <label>Docket  verified code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>