CHATS_SIT/force-app/main/default/objects/sfrosit_t_indiv_other_income_hist__x/fields/idn_court__c.field-meta.xml
<CustomField>
    <fullName>idn_court__c</fullName>
    <description>idn_court</description>
    <externalDeveloperName>idn_court</externalDeveloperName>
    <label>Court Id</label>
    <length>21</length>
    <type>Text</type>
</CustomField>