CHATS_SIT/force-app/main/default/objects/sfrosit_t_indiv_other_income_hist__x/fields/idn_income_other__c.field-meta.xml
<CustomField>
    <fullName>idn_income_other__c</fullName>
    <description>idn_income_other</description>
    <externalDeveloperName>idn_income_other</externalDeveloperName>
    <label>Other Income ID</label>
    <length>50</length>
    <referenceTargetField>T_INDIV_OTHER_INCOME__c.IDN_EXTNL__c</referenceTargetField>
    <referenceTo>T_INDIV_OTHER_INCOME__c</referenceTo>
    <relationshipLabel>Other Income Legacy History</relationshipLabel>
    <relationshipName>sfrosit_t_indiv_other_income_hist</relationshipName>
    <type>IndirectLookup</type>
</CustomField>