CHATS_SIT/force-app/main/default/objects/sfrosit_t_indiv_other_income_hist__x/fields/idn_income_other_hist__c.field-meta.xml
<CustomField>
    <fullName>idn_income_other_hist__c</fullName>
    <description>idn_income_other_hist</description>
    <externalDeveloperName>idn_income_other_hist</externalDeveloperName>
    <label>Other Income ID history</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>