CHATS_SIT/force-app/main/default/objects/sfrosit_t_indiv_other_income_hist__x/fields/nbr_seq_income_other__c.field-meta.xml
<CustomField>
    <fullName>nbr_seq_income_other__c</fullName>
    <description>nbr_seq_income_other</description>
    <externalDeveloperName>nbr_seq_income_other</externalDeveloperName>
    <label>Other Income Sequence Number</label>
    <precision>7</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>